css/kasper.css
/* ... */
.landing .text h2 {
  font-weight: normal;
  line-height: 1.6;
  font-size: 32px;
  margin-bottom: 25px;
}
.landing .text p {
  font-size: 14px;
  line-height: 2;
}
.landing ul {
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}
.landing ul li {
  width: 20px;
  height: 20px;
  border: 1px solid #fff;
  border-radius: 50%;
  margin-right: 10px;
  cursor: pointer;
}
.landing ul li.active {
  background-color: var(--main-color);
  border-color: var(--main-color);
}
.landing ul li:not(.active):hover {
  background-color: rgba(0, 199, 252, 60%);
}
/* End Landing */
/* Start Services */
.services {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}
.services .boxes {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
@media (max-width: 767px) {
  .services .boxes {
    flex-direction: column;
  }
  .services .boxes .box {
    flex-direction: column;
    text-align: center;
  }
}
.services .boxes .box {
  flex-basis: 44%;
  margin-bottom: 50px;
  display: flex;
}
.services .boxes .box i {
  margin-right: 30px;
}
@media (max-width: 767px) {
  .services .boxes .box i {
    margin: 0 0 30px;
  }
}
.services .boxes .box h3 {
  color: var(--main-color);
  margin-bottom: 30px;
  font-size: 19px;
}
.services .boxes .box p {
  color: var(--p-color);
  line-height: 2;
}
/* End Services */
/* Start Design */
.design {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  background-image: url(../images/design-features.webp);
  background-size: cover;
  background-position: center;
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  height: 600px;
}
.design::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--five-to-ten-overlay);
}
.design .text {
  width: 670px;
  color: #fff;
  background-color: var(--transparent-color);
  padding: 50px;
  max-width: 100%;
  flex: 1;
  position: relative;
}
.design .text h2 {
  font-weight: normal;
  text-transform: uppercase;
  margin-bottom: 45px;
}
.design .text li {
  margin-bottom: 25px;
  padding-left: 30px;
  position: relative;
}
.design .text li::before {
  content: "\e163";
  font-family: "Font Awesome 6 Free";
  position: absolute;
  left: 0;
  font-weight: 900;
}
.design .mobile {
  position: relative;
  flex: 1;
  text-align: center;
}
.design .mobile img {
  position: relative;
  top: 200px;
}
@media (max-width: 767px) {
  .design .mobile {
    display: none;
  }
  .design .text {
    width: 100%;
  }
}
/* End Design */
/* Start Portfolio */
.portfolio {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}
.portfolio ul {
  display: flex;
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
}
.portfolio ul a {
  padding: 10px 15px;
  display: block;
  color: black;
  text-transform: capitalize;
  cursor: pointer;
  margin-left: 5px;
}
.portfolio ul a.active,
.portfolio ul a:hover {
  color: #fff;
  background-color: var(--main-color);
}
.portfolio .images {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}
.portfolio .images .image {
  position: relative;
  overflow: hidden;
}
.portfolio .image img {
  max-width: 100%;
  margin-bottom: 5px;
  transition: var(--transition-time);
}
.portfolio .image:hover img {
  transform: rotate(4deg) scale(1.1);
}
.portfolio .image .info {
  position: absolute;
  background-color: #fff;
  z-index: 2;
  width: 100%;
  bottom: -120px;
  padding: 30px;
  transition: var(--transition-time);
}
.portfolio .image:hover .info {
  bottom: 0;
}
.portfolio .image .info h4 {
  font-weight: normal;
  margin-bottom: 10px;
}
.portfolio .image .info p {
  color: var(--main-color);
}
.portfolio button {
  border: none;
  background: none;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.portfolio button a {
  border: none;
  text-transform: uppercase;
  margin-top: 20px;
  transition: var(--transition-time);
}
.portfolio button a:hover {
  box-shadow: inset 0 0 0 30px var(--box-shadow-hover);
}
/* End Portfolio */
/* Start Video */
.video {
  position: relative;
}
.video::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--five-to-ten-overlay);
}
.video video {
  width: 100%;
}
.video .text {
  width: 100%;
  background-color: var(--transparent-color);
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 50px;
  color: #fff;
  text-align: center;
}
.video .text h2 {
  text-transform: uppercase;
  margin-bottom: 20px;
}
.video .text p {
  text-transform: capitalize;
  margin-bottom: 20px;
}
.video .text button {
  background: none;
  border: none;
}
@media (max-width: 767px) {
  .video .text {
    padding: 20px;
  }
  .video .text h2 {
    margin-bottom: 8px;
    font-size: 20px;
  }
  .video .text p {
    margin-bottom: 8px;
  }
  .video .text button a {
    margin: 0 auto;
  }
}
.video .text button a {
  text-transform: uppercase;
  border: none;
  background-color: #000;
  font-size: 18px;
  transition: var(--transition-time);
}
.video .text button a:hover {
  box-shadow: inset 0 0 0 30px var(--box-shadow-hover);
}
/* End Video */
/* Start About */
.about {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  position: relative;
  overflow: hidden;
}
.about .tablet {
  display: block;
  margin: 100px auto -230px auto;
  max-width: 100%;
}
@media (max-width: 767px) {
  .about .tablet {
    margin: 100px auto -200px auto;
  }
}
/* End About */
/* Start Projects */
.projects {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  background-image: url(../images/stats.webp);
  background-size: cover;
  background-position: center;
  position: relative;
}
/* ... */

